<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>br.edu.ufca</groupId>
  <artifactId>chatbot-UFCA</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>chatbot-UFCA</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  	<maven.compiler.source>19</maven.compiler.source>
  	<maven.compiler.target>19</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
	    <groupId>org.postgresql</groupId>
	    <artifactId>postgresql</artifactId>
	    <version>42.7.4</version>
	</dependency>

	<dependency>
	    <groupId>org.jsoup</groupId>
	    <artifactId>jsoup</artifactId>
	    <version>1.18.1</version>
	</dependency>
	
	<dependency>
    	<groupId>org.apache.logging.log4j</groupId>
    	<artifactId>log4j-core</artifactId>
    	<version>2.23.1</version>
	</dependency>
	
	<dependency>
    	<groupId>org.apache.pdfbox</groupId>
    	<artifactId>pdfbox</artifactId>
    	<version>3.0.3</version>
	</dependency>
	
	<dependency>
	    <groupId>technology.tabula</groupId>
	    <artifactId>tabula</artifactId>
	    <version>1.0.4</version>
	</dependency>
	
	<dependency>
    	<groupId>org.quartz-scheduler</groupId>
    	<artifactId>quartz</artifactId>
    	<version>2.3.2</version>
	</dependency>

	<dependency>
    	<groupId>org.telegram</groupId>
	    <artifactId>telegrambots-longpolling</artifactId>
    	<version>7.10.0</version>
	</dependency>

	<dependency>
		<groupId>org.telegram</groupId>
		<artifactId>telegrambots-client</artifactId>
		<version>7.10.0</version>
	</dependency>

  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>br.edu.ufca.chatbot_UFCA.Main</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      
      <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
                <archive>
                    <manifest>
                        <mainClass>br.edu.ufca.chatbot_UFCA.Main</mainClass>
                    </manifest>
                </archive>
            </configuration>
            <executions>
                <execution>
                    <id>make-assembly</id>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
      
    </plugins>
  </build>
    
</project>
